dont show images on non-avatar based leaderboard items

--- a/app/assets/v2/css/leaderboard.css
+++ b/app/assets/v2/css/leaderboard.css
@@ -87,6 +87,9 @@
   opacity: 0.5;
   min-height: 23em;
 }
+#leaderboard .winner {
+  min-height: 23em;
+}
 
 #leaderboard .winner img:hover {
   opacity: 0.55;
